force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__Configuration_Target__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Configuration_Target__c</fullName>
    <inlineHelpText>Select the timelines where you want users to see these fields.</inlineHelpText>
    <label>Configuration Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Cloud Console App</fullName>
            </value>
            <value>
                <fullName>Timeline For Health Cloud Empower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>