force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__FilterCriterion__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FilterCriterion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Criterion</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Record Type does not match Timeline type</errorMessage>
        <filterItems>
            <field>HealthCloudGA__FilterCriterion__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Timeline</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HealthCloudGA__FilterCriterion__c</referenceTo>
    <relationshipLabel>Timeline View Configurations</relationshipLabel>
    <relationshipName>Timeline_View_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>