force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__FriendlyName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FriendlyName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Friendly Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>