force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__GraphicalIcon__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__GraphicalIcon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Graphical Icon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>