force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__HoverFieldName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HoverFieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter up to 7 comma-separated field names related to this object. Field details are displayed when users hover over an object in the timeline.</inlineHelpText>
    <label>Hover Field Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>