force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__PositionField__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PositionField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Position Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>