force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/fields/HealthCloudGA__ShowOnLoad__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ShowOnLoad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Load</label>
    <type>Checkbox</type>
</CustomField>