force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/listViews/HealthCloudGA__All.listView-meta.xml
<ListView>
    <fullName>HealthCloudGA__All</fullName>
    <columns>NAME</columns>
    <columns>HealthCloudGA__ObjectCategory__c</columns>
    <columns>HealthCloudGA__FriendlyName__c</columns>
    <columns>HealthCloudGA__ObjectName__c</columns>
    <columns>HealthCloudGA__PositionField__c</columns>
    <columns>HealthCloudGA__DetailField__c</columns>
    <columns>HealthCloudGA__GraphicalIcon__c</columns>
    <columns>HealthCloudGA__Language__c</columns>
    <columns>HealthCloudGA__Active__c</columns>
    <columns>HealthCloudGA__LanguageCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>