force-app/main/default/src/objects/HealthCloudGA__TimelineViewConfiguration__c/listViews/PJN_Active.listView-meta.xml
<ListView>
    <fullName>PJN_Active</fullName>
    <columns>NAME</columns>
    <columns>HealthCloudGA__DetailField__c</columns>
    <columns>HealthCloudGA__PositionField__c</columns>
    <columns>HealthCloudGA__HoverFieldName__c</columns>
    <columns>HealthCloudGA__FilterCriterion__c</columns>
    <columns>HealthCloudGA__ObjectCategory__c</columns>
    <columns>HealthCloudGA__GraphicalIcon__c</columns>
    <columns>HealthCloudGA__SortOrder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HealthCloudGA__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>